Add quality of life improvements: curl installation, troubleshooting, and polish
Quality of Life Additions:
- Added curl-based one-line installation via install.sh
- Added LICENSE file (GPLv3)
- Added requirements.txt for easy dependency installation
- Added --version flag to script (v1.0.0)
- Added comprehensive troubleshooting section to README
- Updated installation instructions with quick curl method

Installation Features:
- Automatic Python/Java detection
- PATH setup instructions
- User-friendly installation output
- Installs to ~/.local/bin for easy access

Documentation Improvements:
- Troubleshooting for connection, Java, download, and SSH issues
- Cross-platform installation methods
- Clear error resolution steps
- Links to issue tracker for support

This makes the script much easier to install and use for all platforms.

Co-Authored-By: Claude Sonnet 4.5 (1M context) <noreply@anthropic.com>