@@ -22,17 +22,37 @@ Downloads needed Java files and sets up port forwarding via SSH for remote acces
 
 ## Installation
 
+### Quick Install (Recommended)
+
+One-line installation via curl:
+```bash
+curl -sSL https://raw.githubusercontent.com/stlalpha/idracclient/master/install.sh | bash
+```
+
+This will:
+- Download the script to `~/.local/bin/idracclient`
+- Install Python dependencies (aiohttp)
+- Check for Python and Java
+- Add to your PATH (if needed)
+
+### Manual Installation
+
 1. Clone the repository:
    ```bash
-   git clone https://github.com/yourusername/idracclient.git
+   git clone https://github.com/stlalpha/idracclient.git
    cd idracclient
    ```
 
-2. Create a virtual environment and install dependencies:
+2. Install dependencies:
    ```bash
-   python3 -m venv .venv
-   source .venv/bin/activate  # On Windows: .venv\Scripts\activate
+   pip install -r requirements.txt
+   # or
    pip install aiohttp
+   ```
+
+3. Make executable:
+   ```bash
+   chmod +x idracclient.py
    ```
 
 ## Usage
@@ -119,6 +139,68 @@ python idracclient.py --java "C:\Path\To\Java8\bin\java.exe" 192.168.0.132
 # Force re-download files
 ./idracclient.py -f 192.168.0.132
 ```
+
+## Troubleshooting
+
+### Connection Issues
+
+**"No route to host" (Error 113)**
+- Verify the iDRAC IP address is correct
+- Check network connectivity: `ping <idrac-ip>`
+- Ensure you're on the same network or use a jumphost
+- Try the web interface first: `https://<idrac-ip>`
+
+**SSL/TLS Errors**
+- Use `--tlscheck` flag to enable certificate validation (disabled by default)
+- Older iDRACs use outdated crypto - the script handles this automatically
+
+**Connection Timeout**
+- Check if port 443 (HTTPS) and 5900 (KVM) are open
+- Use custom ports if needed: `--port 443 --kvmport 5900`
+- Try connecting through a jumphost: `-J jumphost.example.com`
+
+### Java Issues
+
+**Keyboard Not Working**
+- **Solution:** Use Java 8 instead of newer versions
+- Install Java 8 and specify it: `--java /path/to/java8/bin/java`
+- See Java Compatibility section above for installation instructions
+
+**"UnsatisfiedLinkError" with Native Libraries**
+- **Modern Java (9+):** Script automatically adds `--enable-native-access` flag
+- **Alternative:** Skip native libs: `--no-native-libs` (reduced functionality)
+
+**Java Not Found**
+- Install Java: See Requirements section
+- Specify Java path: `--java /path/to/java`
+- Check Java installation: `java -version`
+
+### Download Issues
+
+**Files Won't Download**
+- Force re-download: `--force-download` or `-f`
+- Check iDRAC web interface is accessible
+- Ensure iDRAC firmware is up to date
+
+### Jumphost/SSH Issues
+
+**Port Forwarding Timeout**
+- Increase SSH timeout: `--sshtimeout 30` (default: 8 seconds)
+- Verify SSH access to jumphost works manually
+- Check SSH keys or password authentication
+
+**Custom Ports**
+- Specify local ports: `--jumphttpport 8443 --jumpkvmport 5901`
+- Avoid port conflicts with already-running services
+
+### Getting Help
+
+If you encounter issues:
+1. Run with `--dryrun` to test without launching viewer
+2. Check the command being generated (printed before execution)
+3. Verify Python version: `python3 --version` (need 3.6+)
+4. Verify Java version: `java -version` (recommend 8)
+5. Open an issue: https://github.com/stlalpha/idracclient/issues
 
 ## License
 
